# skin-diagnosis-capstone

./: .gitignore  README.md  cloudbuild.yaml  docker-compose.yml
backend/: .env.sample  Dockerfile  README.md  main.py  pyproject.toml  skin_analyzer.py  skin_full_seg.py  skin_lesion_classifier.py  skin_segment.py  skin_test.py  utils.py
backend/auth/: __init__.py  firebase_config.py  middleware.py  models.py  routes.py  service.py
backend/chatbot/: Dockerfile  MEMORY_OPTIMIZATION_README.md  db_utils.py  finetune_chat.py  gemini_chat.py  memory_config.py  models.py  openai_client.py  rag_chain.py  scraper.py  search.py  sse_events.py  sse_server.py
backend/chatbot/qdrant_storage/: raft_state.json
backend/chatbot/qdrant_storage/collections/skin_lesion_knowledge/0/: newest_clocks.json  replica_state.json
backend/chatbot/qdrant_storage/collections/skin_lesion_knowledge/0/segments/15e0aabd-f845-4c42-b676-8862532f2a80/: mutable_id_tracker.mappings
backend/chatbot/qdrant_storage/collections/skin_lesion_knowledge/0/segments/15e0aabd-f845-4c42-b676-8862532f2a80/payload_index/: IDENTITY  LOG  MANIFEST-000005
backend/chatbot/qdrant_storage/collections/skin_lesion_knowledge/0/segments/3f2c743e-f903-4713-ad24-33f885c86f5e/payload_index/: IDENTITY  LOG  MANIFEST-000005
backend/chatbot/qdrant_storage/collections/skin_lesion_knowledge/0/segments/7d35862f-3a2b-4e13-b972-ab0b02f8dcb9/payload_index/: IDENTITY  LOG  MANIFEST-000005
backend/user_profiles/: crud.py  database.py  models.py  schemas.py
backend/utils_ckpt/: download_and_extract_checkpoints.py
(+57 files in other folders)
